# ceiling-crm

./: .bash_history  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  e exec bot alembic upgrade head  pyproject.toml  requirements.txt
.claude/: CLAUDE.md  settings.local.json
.claude/hooks/: PostToolUse.md  PreToolUse.md
.claude/subagents/: ai-prompt-reviewer.md  code-reviewer.md  sales-flow-reviewer.md  test-runner.md
.github/workflows/: ci.yml  deploy.yml  security.yml
apps/admin/: __init__.py  deps.py
apps/admin_frontend/: dashboard.css  dashboard.html  dashboard.js  index.html
apps/api/: deps.py  main.py
apps/bot/: main.py
apps/scheduler/: main.py
apps/web/: admin_auth_routes.py  api_client.py  auth.py  config.py  csrf_middleware.py  main.py
apps/webchat/: build.py  index.html  widget.css  widget.js
core/channels/: base.py
core/domain/: ai_knowledge.py  ai_response.py  appointment.py  audit.py  broadcast.py  group_settings.py  lead.py  payment.py  quote.py  subscription_payment.py  user.py  warranty.py
core/events/: bus.py
core/repositories/: admin_group_repo.py  ai_knowledge_repo.py  appointment_repo.py  base.py  blocked_chat_repo.py  broadcast_repo.py  group_join_repo.py  group_settings_repo.py  lead_repo.py  payment_repo.py  pipeline_repo.py  subscription_payment_repo.py  tactic_outcome_repo.py  tenant_repo.py  user_repo.py  warranty_repo.py
core/schemas/: admin_auth.py  admin_security_action.py  admin_security_audit.py  admin_user.py  agent_control_center.py  agent_decision.py  agent_effective_settings.py  agent_execution.py  agent_metrics.py  agent_orchestrator.py  agent_quality_simulator.py  agent_rollout_preset.py  agent_settings.py  catalog_link.py  chat_schemas.py  contact_price_calculator.py  conversation_policy.py  crm_analytics_charts.py  crm_campaign.py  crm_campaign_analytics.py  crm_campaign_send.py  crm_contact_merge.py  crm_conversation_replay.py  crm_dashboard_analytics.py  crm_missed_leads.py  crm_operator_digest.py  crm_price_estimate_history.py  docs_index.py  dynamic_offer.py  lead_risk_explanation.py  lead_schemas.py  lead_signal.py  next_best_action.py  operator_reply_suggestion.py  price_calculator.py  pricing_schemas.py  stage1_observation_report.py  stage2_dryrun_report.py  stage3_canary_readiness.py  stage3_canary_report.py  (+5 more)
core/security/: prompt_sanitizer.py  rate_limiter.py  token_encryption.py
core/services/: adaptive_weights_service.py  admin_audit_log_service.py  admin_auth_service.py  admin_csrf_service.py  admin_escalation_service.py  admin_group_service.py  admin_rbac_service.py  admin_security_action_service.py  admin_security_audit_service.py  admin_user_service.py  agent_control_center_service.py  agent_decision_engine.py  agent_effective_settings_service.py  agent_execution_queue_service.py  agent_execution_sandbox_service.py  agent_memory_service.py  agent_metrics_service.py  agent_quality_simulator_service.py  agent_response_orchestrator.py  agent_rollout_preset_service.py  agent_settings_service.py  ai_auto_closer_service.py  ai_cache_service.py  ai_engine.py  ai_knowledge_service.py  ai_message_composer_service.py  ai_orchestrator_service.py  ai_sales_advice.py  ai_sales_brain_service.py  ai_service.py  analytics_service.py  approved_execution_sender_service.py  auto_sales_service.py  billing_service.py  bot_registry.py  broadcast_service.py  catalog_link_resolver_service.py  ceiling_calculator.py  closing_readiness_service.py  contact_price_calculator_service.py  (+87 more)
deploy/: DEPLOY_CHECKLIST.md
deploy/docker/: Dockerfile
deploy/scripts/: backup.sh
docs/: AI_SYSTEM.md  API_USAGE.md  ARCHITECTURE.md  CLAUDE_CONTEXT.md  CRM_DOMAIN.md  DO_NOT_BREAK.md  MODULE_MAP.md  NEXT_STEPS.md  PROJECT_PASSPORT.md  WEB_INTEGRATION_PLAN.md
docs/AI_AGENT_SYSTEM/: 00_OVERVIEW.md  01_AGENT_ARCHITECTURE.md  02_CUSTOMER_JOURNEY_TRACKING.md  03_FOLLOW_UP_ENGINE.md  04_AGENT_MEMORY.md  05_AGENT_PROMPTS.md  06_EVENTS_AND_TRIGGERS.md  07_TELEGRAM_UX_FLOWS.md  08_ADMIN_NOTIFICATIONS.md  09_IMPLEMENTATION_ROADMAP.md  100_PRICE_CALCULATOR_SOURCE_OF_TRUTH.md  101_BOT_SERVICE_WIRING_PRICE_HANDOFF.md  102_AI_AGENT_WEB_IMPROVEMENT_AUDIT.md  103_NEXT_IMPROVEMENT_ROADMAP.md  104_PRE_STAGE_1_FINAL_CHECKLIST.md  105_AI_AGENT_QUALITY_SIMULATOR_AUDIT.md  106_AI_AGENT_DECISION_IMPROVEMENT_PLAN.md  107_AGENT_DECISION_FIXES_CQ.md  108_STAGE_1_FINAL_APPLY_PACK_LATEST.md  109_ULTRA_DEEP_PROJECT_AUDIT.md  10_TEST_PLAN.md  110_PROJECT_RISK_REGISTER.md  111_NEXT_30_STEP_MASTER_ROADMAP.md  112_STAGE_1_GO_NO_GO_EXECUTIVE_SUMMARY.md  113_PRE_STAGE_1_P0_READINESS_RUNBOOK.md  114_STAGE_1_ENV_FLAG_MATRIX.md  115_FRESH_START_PROJECT_MAP.md  116_HANDOFF_QUEUE_API_WEB_PAGE.md  117_AI_TRACE_VIEWER_CONTACT_DETAIL.md  118_MISSED_LEADS_DASHBOARD.md  119_ANALYTICS_CHARTS.md  11_PRODUCTION_LIVE_CHECKLIST.md  120_CONVERSATION_REPLAY.md  121_GITHUB_CI_ERROR_AUDIT_AND_FIXES.md  122_PRICE_ESTIMATE_HISTORY.md  123_OPERATOR_ASSIGNMENT_UI.md  124_HANDOFF_AUTO_EXPIRE_JOB.md  125_STAGE_1_READINESS_REVIEW_AFTER_FRESH_START.md  126_OPERATOR_NOTIFICATION_DIGEST.md  127_FINAL_CRM_WEB_UX_POLISH.md  (+68 more)
infrastructure/: di.py  error_logger.py
infrastructure/ai/: openai_client.py
infrastructure/cache/: __init__.py  bot_registry_state.py  client.py  distributed_lock.py  keys.py  redis_atomic.py
infrastructure/database/: session.py
infrastructure/monitoring/: prometheus.py
infrastructure/payment/: __init__.py  click_provider.py  payme_provider.py
infrastructure/queue/: app.py
infrastructure/storage/: adapter.py
scripts/: agent_preflight_check.py  agent_stage1_readiness_check.py  agent_stage3_canary_readiness_check.py  agent_stage4_approval_readiness_check.py  agent_stage5_live_send_readiness_check.py  final_ui_stage1_check.py  load_test.py  platform_readiness_audit.py  production_deploy_dry_run_check.py  security_enablement_preflight.py  seed_db.py  smoke_api.py
shared/config/: __init__.py  settings.py
shared/constants/: catalog.py  enums.py  (+3 more)
tests/: conftest.py
(+634 files in other folders)
