[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ceiling-crm"
version = "1.0.0"
description = "Enterprise Telegram CRM & Automation Platform for Stretch Ceiling Business"
requires-python = ">=3.11"
authors = [{ name = "CeilingCRM Team" }]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "mypy>=1.8",
    "ruff>=0.3",
    "black>=24.0",
    "httpx>=0.27",       # async test client
    "factory-boy>=3.3",  # test fixtures
    "faker>=24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "core*", "infrastructure*", "shared*"]

# ─────────────────────────────────────────────────────────────────────────────
# Core runtime dependencies (also listed here for documentation; use
# requirements/ files for pinned production installs)
# ─────────────────────────────────────────────────────────────────────────────
# Bot framework
#   aiogram==3.7.0
#   aiogram-dialog==2.1.0
#
# Web / API
#   fastapi==0.111.0
#   uvicorn[standard]==0.29.0
#
# Database
#   sqlalchemy[asyncio]==2.0.30
#   asyncpg==0.29.0
#   alembic==1.13.1
#
# Cache / Queue
#   redis[hiredis]==5.0.4
#   celery[redis]==5.4.0
#   APScheduler==3.10.4
#
# Validation
#   pydantic==2.7.1
#   pydantic-settings==2.2.1
#
# Logging / Monitoring
#   structlog==24.1.0
#   sentry-sdk[fastapi]==1.45.0
#   prometheus-client==0.20.0
#
# AI
#   openai==1.30.0
#   tiktoken==0.7.0
#
# Utilities
#   python-dotenv==1.0.1
#   httpx==0.27.0
#   aiofiles==23.2.1
#   pillow==10.3.0
#
# Google Sheets export
#   google-api-python-client==2.128.0
#   google-auth-httplib2==0.2.0
#   google-auth-oauthlib==1.2.0
#
# Excel/PDF export
#   openpyxl==3.1.2
#   reportlab==4.1.0

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "ANN", "ASYNC", "B", "C4", "T20"]
ignore = [
    "ANN101", "ANN102", "ANN401",
    # Legacy codebase debt — address in a dedicated cleanup sprint
    "E501",    # line too long (419 pre-existing)
    "E701",    # multiple statements on one line (colon)
    "E702",    # multiple statements on one line (semicolon)
    "E741",    # ambiguous variable name
    "B008",    # function call in default argument (Field/Depends pattern)
    "UP042",   # replace str enum (requires careful migration)
    "UP031",   # printf string formatting
    "N806",    # non-lowercase variable in function
    "N802",    # invalid function name
    "N811",    # constant imported as non-constant
    "N814",    # camelcase imported as constant
    "E731",    # lambda assignment
    "F841",    # unused variable
    "C408",    # unnecessary collection call
    "ASYNC240", # blocking path method in async function
    "B007",    # unused loop control variable
    "B017",    # assert-raises-exception
    "F821",    # undefined name (33 pre-existing, lazy/conditional imports)
    "ANN001",  # missing type for function arg
    "ANN003",  # missing type for **kwargs
    "ANN201",  # missing return type for public function
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN", "S101"]
"scripts/*" = ["ANN", "T20"]
"*/__init__.py" = ["F401"]
"infrastructure/database/migrations/*" = ["E402", "F401"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
plugins = ["pydantic.mypy"]
explicit_package_bases = true
warn_unused_configs = true
warn_return_any = true
warn_redundant_casts = true
check_untyped_defs = true
exclude = [
    "^scripts/",
    "^deploy/",
    "^alembic/",
    "^tests/",
]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --cov=. --cov-report=term-missing"

[tool.coverage.run]
omit = ["tests/*", "scripts/*", "deploy/*", "alembic/*"]
